# url_shortener

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  settings.py
tests/: conftest.py  test_url_shortener.py
url_shortener/: app.py  config.py  crud.py  database.py  key_generator.py  models.py  schemas.py  settings.py
