[tool.poetry]
name = "url-shortener"
version = "0.1.0"
description = ""
authors = ["Anu1996rag <anuragpatils1996@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.104.1"
uvicorn = "^0.24.0.post1"
sqlalchemy = "^2.0.23"
python-dotenv = "^1.0.0"
validators = "^0.22.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
